...
    <item
        android:id="@+id/navigation_artists"
        android:icon="@drawable/ic_artist_24px"
        android:title="@string/title_artists" />

    <item
        android:id="@+id/navigation_collectors"
        android:icon="@drawable/ic_playlist_add_circle_24px"
        android:title="@string/title_collectors" />

    <item
        android:id="@+id/navigation_create_album"
        android:icon="@drawable/ic_format_list_bulleted_add_24px"
...
