<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Nombre"
            android:textColor="@android:color/white"
            android:layout_marginBottom="8dp"/>

        <EditText
            android:id="@+id/nameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_input_background"
            android:padding="12dp"
            android:textColor="@android:color/black"
            android:inputType="textCapSentences"
            android:hint="@string/enter_album_name"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Cover"
            android:textColor="@android:color/white"
            android:layout_marginBottom="8dp"/>

        <EditText
            android:id="@+id/coverInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_input_background"
            android:padding="12dp"
            android:textColor="@android:color/black"
            android:inputType="textUri"
            android:hint="@string/enter_cover_path"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Fecha lanzamiento"
            android:textColor="@android:color/white"
            android:layout_marginBottom="8dp"/>

        <EditText
            android:id="@+id/releaseDateInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_input_background"
            android:padding="12dp"
            android:textColor="@android:color/black"
            android:inputType="date"
            android:hint="@string/enter_date"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Descripción"
            android:textColor="@android:color/white"
            android:layout_marginBottom="8dp"/>

        <EditText
            android:id="@+id/descriptionInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_input_background"
            android:padding="12dp"
            android:textColor="@android:color/black"
            android:inputType="textCapSentences|textMultiLine"
            android:minLines="3"
            android:gravity="top|start"
            android:hint="@string/enter_description"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Género"
            android:textColor="@android:color/white"
            android:layout_marginBottom="8dp"/>

        <EditText
            android:id="@+id/genreInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_input_background"
            android:padding="12dp"
            android:textColor="@android:color/black"
            android:inputType="textCapWords"
            android:hint="@string/enter_genre"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sello Discográfico"
            android:textColor="@android:color/white"
            android:layout_marginBottom="8dp"/>

        <EditText
            android:id="@+id/recordLabelInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_input_background"
            android:padding="12dp"
            android:textColor="@android:color/black"
            android:inputType="textCapWords"
            android:hint="@string/enter_record_label"
            android:layout_marginBottom="24dp"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/saveButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:text="Guardar"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                app:backgroundTint="@color/button_color"
                app:cornerRadius="8dp"
                app:layout_constraintWidth_percent="0.8"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</ScrollView>

