...
    <string name="title_albums_intern">Albums</string>
    <string name="album_cover">Album Cover</string>
    <string name="title_artists">Artists</string>
    <string name="artist_image">Image</string>
    <string name="title_collectors">Collectors</string>
    <string name="search_album">Search album</string>
    <string name="bot_n_flotante">Botón flotante</string>
    <string name="collector_photo">Collector Photo</string>
    <string name="total_albums">%1$d Albums</string>
    <string name="artist_photo">Artist Photo</string>
    <string name="songs">Canciones</string>
    <string name="add_track">Adicionar</string>
    <string name="add_track_name">Nombre de la cancion</string>
...
